Landing Page :: add team member info

--- a/public/landing/index.html
+++ b/public/landing/index.html
@@ -326,43 +326,40 @@
                         </div>
                         <div class="team-content">
                             <h5 class="holder-name">Ahmet Feyzi Halaç</h5>
-                            <p class="text">Co-Founder</p>
                         </div>
                     </div> <!-- single team -->
                 </div>
                 <div class="col-lg-3 col-md-7 col-sm-8">
                     <div class="single-team text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                         <div class="team-image">
-                            <img src="landing/assets/images/anonym_avatar.png" alt="Team">
+                            <img src="landing/assets/images/aybars.jpeg" alt="Team">
                             <div class="social">
                                 <ul>
-                                    <li><a target="_blank"><i class="lni-github-original"></i></a></li>
-                                    <li><a target="_blank"><i class="lni-linkedin-original"></i></a></li>
+                                    <li><a href="https://github.com/aybarsaltinisik" target="_blank"><i class="lni-github-original"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/aaltinisik/" target="_blank"><i class="lni-linkedin-original"></i></a></li>
                                     <li><a href="mailto:aybars.altinisik@gmail.com" target="_blank"><i class="lni-google"></i></a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="team-content">
                             <h5 class="holder-name">Aybars Altınışık</h5>
-                            <p class="text">Co-Founder</p>
                         </div>
                     </div> <!-- single team -->
                 </div>
                 <div class="col-lg-3 col-md-7 col-sm-8">
                     <div class="single-team text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                         <div class="team-image">
-                            <img src="landing/assets/images/anonym_avatar.png" alt="Team">
+                            <img src="landing/assets/images/goktug.jpg" alt="Team">
                             <div class="social">
                                 <ul>
-                                    <li><a target="_blank"><i class="lni-github-original"></i></a></li>
-                                    <li><a target="_blank"><i class="lni-linkedin-original"></i></a></li>
+                                    <li><a href="https://github.com/ggurbuzturk" target="_blank"><i class="lni-github-original"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/g%C3%B6ktu%C4%9F-g%C3%BCrb%C3%BCzt%C3%BCrk-1107971a3" target="_blank"><i class="lni-linkedin-original"></i></a></li>
                                     <li><a href="mailto:ggurbuzturk@gmail.com" target="_blank"><i class="lni-google"></i></a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="team-content">
                             <h5 class="holder-name">Göktuğ Gürbüztürk</h5>
-                            <p class="text">Co-Founder</p>
                         </div>
                     </div> <!-- single team -->
                 </div>
@@ -380,7 +377,6 @@
                         </div>
                         <div class="team-content">
                             <h5 class="holder-name">Ege Şahin</h5>
-                            <p class="text">Co-Founder</p>
                         </div>
                     </div> <!-- single team -->
                 </div>
