Landing Page :: add ege as team member

--- a/public/landing/index.html
+++ b/public/landing/index.html
@@ -366,11 +366,11 @@
                 <div class="col-lg-3 col-md-7 col-sm-8">
                     <div class="single-team text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                         <div class="team-image">
-                            <img src="landing/assets/images/anonym_avatar.png" alt="Team">
+                            <img src="landing/assets/images/ege.jpeg" alt="Team">
                             <div class="social">
                                 <ul>
-                                    <li><a target="_blank"><i class="lni-github-original"></i></a></li>
-                                    <li><a target="_blank"><i class="lni-linkedin-original"></i></a></li>
+                                    <li><a href="https://github.com/ege-sahin" target="_blank"><i class="lni-github-original"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/mwlite/in/ege-sahin-437113207" target="_blank"><i class="lni-linkedin-original"></i></a></li>
                                     <li><a href="mailto:sahin.ege98@gmail.com" target="_blank"><i class="lni-google"></i></a></li>
                                 </ul>
                             </div>
