add project website to landing page

--- a/public/landing/index.html
+++ b/public/landing/index.html
@@ -100,10 +100,13 @@
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#team">Team</a>
                                     </li>
+                                    <li class="nav-item">
+                                        <a href="https://recroute.github.io/info">Project</a>
+                                    </li>
                                 </ul>
                             </div> <!-- navbar collapse -->
                             
-                            <div class="navbar-btn d-none d-sm-inline-block">
+                            <div class="navbar-btn d-sm-inline-block">
                                 <a class="main-btn" data-scroll-nav="0" href="/api/auth/login?returnTo=/flows">Login</a>
                             </div>
                         </nav> <!-- navbar -->
